# cymor-movie-api

./: .env.example  Readme.md  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  main.py  schemas.py
app/routes/: __init__.py  search.py  streaming.py
app/services/: __init__.py  moviebox_service.py
